improved perf for regexp